--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ requires = ["flit_core >=3.2,<4"]
 build-backend = "flit_core.buildapi"
 
 [project]
-name = "schemdrawmarkdown"
+name = "schemdraw-markdown"
 authors = [{name = "Joe Stanley", email = "engineerjoe440@yahoo.com"}]
 readme = "README.md"
 license = {file = "LICENSE"}
